[RED] add more tests on Voucher Repository